--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Nama Aplikasi : {{ app_name }}</h1>
     <p>Nama: {{ nama }}</p>
+    <p>Nama: {{ npm }}</p>
     <p>Kelas: {{ kelas }}</p>
 </body>
 </html>
