--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -97,7 +97,7 @@
       {% endfor %}
     </section> -->
 
-    <!-- Bagian All Prod -->
+    <!-- Bagian All Produc -->
     <section class="bg-white rounded-lg shadow p-6">
       <h1 class="text-2xl font-bold mb-4 text-black">All Products</h1>
       {% if not product_list %}
