--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="w-full min-h-screen bg-gray-50 p-8">
-  <a href="/" class="inline-block mb-4 px-4 py-2 bg-black text-white rounded hover:bg-white hover:text-black hover:outline hover:outline-black font-semibold transition">Back to Home</a>
+  <a href="/" class="inline-block mb-4 px-4 py-2 bg-black text-white rounded hover:bg-white hover:text-black hover:outline font-semibold transition">Back to Home</a>
   <div class="flex items-center justify-between mb-6">
     <h1 class="text-2xl font-bold text-black">Add Product</h1>
     <img src="/static/assets/90MinutesZoneLogo.png" alt="Logo" class="h-10 w-auto">
@@ -20,7 +20,7 @@
           {% endif %}
 
         </label>
-  {{ field }}
+      {{ field }}
         {% if field.help_text %}
           <p class="text-xs text-gray-500">
             {{ field.help_text }}
