--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block meta %} {% endblock meta %}
+  {% load static %}
+  {% block meta %}{% endblock meta %}
+  <link rel="icon" type="image/png" href="{% static '90MinutesZoneLogo.png' %}">
+  <link rel="stylesheet" href="{% static 'css/global.css' %}">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -17,8 +20,7 @@
     }
   </script>
 </head>
-<body>
-  {% block content %} {% endblock content %}
-  </h1>
+<body class="min-h-screen">
+  {% block content %}{% endblock content %}
 </body>
 </html>
