--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -81,7 +81,9 @@
       <h1 class="text-2xl font-bold mb-4 text-black">My Products</h1>
     {% endif %}
     {% if not product_list %}
-      <p class="text-gray-500">Belum ada produk</p>
+          <div class="w-32 h-32 mx-auto mb-4">
+          <img src="{% static 'no-product.png' %}" alt="No Product Available" class="w-full h-full object-contain">
+        </div>
     {% else %}
       {% include 'cards.html' with products=product_list empty_message="Belum ada produk" %}
     {% endif %}
@@ -100,6 +102,4 @@
     </div>
 
 </footer>
-</body>
-</html>
 {% endblock content %}
